@@ -3,11 +3,16 @@
 echo Starting L2J Game Server.
 echo.
 
-
 SET OLDCLASSPATH=%CLASSPATH%
 call setenv.bat
 
+REM -------------------------------------
+REM Default parameters for a basic server.
 java -Xmx1024m net.sf.l2j.gameserver.GameServer
+REM
+REM If you have a big server and lots of memory, you could experiment for example with
+REM java -server -Xmx1536m -Xms1024m -Xmn512m -XX:PermSize=256m -XX:SurvivorRatio=8 -Xnoclassgc -XX:+AggressiveOpts
+REM -------------------------------------
 
 SET CLASSPATH=%OLDCLASSPATH%
 
